--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                 </li>
               </ul>
             </div>
+            <ul class="nav">
+							<li class="nav-item">
+								<a class="nav-link" href="#">
+									<img src="img/icon/shopping-cart.png" alt="">
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">
+									<img src="img/icon/search.png" alt="">
+								</a>
+							</li>
+						</ul>
           </div>
         </nav>
       </div>
@@ -703,50 +715,66 @@
           <div class="text-center">
             <h3 class="small-heading">Who we are</h3>
             <h2 class="big-heading">meet our team</h2>
-            <hr class="h-line"/>
+            <hr class="h-line" />
           </div>
           <div class="row container-box pt-5 pb-5">
             <div class="col-6">
               <div class="row client_card">
-                <img class="col-3" src="img/work/client1.png" alt="">
+                <img class="col-3" src="img/work/client1.png" alt="" />
                 <div class="col-9 text-left">
                   <h3>MATTHEW DIX</h3>
                   <h4>Graphic Design</h4>
-                  <hr class="h-line">
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                  <hr class="h-line" />
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <div class="row client_card">
-                <img class="col-3" src="img/work/client2.png" alt="">
+                <img class="col-3" src="img/work/client2.png" alt="" />
                 <div class="col-9 text-left">
                   <h3>MATTHEW DIX</h3>
                   <h4>Graphic Design</h4>
-                  <hr class="h-line">
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                  <hr class="h-line" />
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <div class="row client_card">
-                <img class="col-3" src="img/work/client3.png" alt="">
+                <img class="col-3" src="img/work/client3.png" alt="" />
                 <div class="col-9 text-left">
                   <h3>MATTHEW DIX</h3>
                   <h4>Graphic Design</h4>
-                  <hr class="h-line">
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                  <hr class="h-line" />
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <div class="row client_card">
-                <img class="col-3" src="img/work/client4.png" alt="">
+                <img class="col-3" src="img/work/client4.png" alt="" />
                 <div class="col-9 text-left">
                   <h3>MATTHEW DIX</h3>
                   <h4>Graphic Design</h4>
-                  <hr class="h-line">
-                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                  <hr class="h-line" />
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim.
+                  </p>
                 </div>
               </div>
             </div>
@@ -761,63 +789,69 @@
         <div class="head_blog">
           <h3 class="small-heading">Our stories</h3>
           <h2 class="big-heading">LATEST BLOG</h2>
-          <hr class="h-line"/>
+          <hr class="h-line" />
         </div>
         <div class="row list-blog container-box text-left">
-          <div class="col-4">
+          <div class="col-lg-4">
             <a href="#">
-              <img src="img/blog/blog1.jpg" alt="">
+              <img src="img/blog/blog1.jpg" alt="" />
               <div class="calendar">
                 <span class="big-heading">15</span>
                 <p class="month">Jan</p>
               </div>
             </a>
-            <a class="name" href="#">Christopher Campbell</a>
-            <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <div>
+              <a class="name" href="#">Christopher Campbell</a>
+            <p class="content-blog">
+              Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua.
             </p>
-            <hr class="blog-hr">
-            <img src="img/icon/view.png" alt="">
+            </div>
+            <hr class="blog-hr" />
+            <img src="img/icon/view.png" alt="" />
             <span class="view">542</span>
-            <img src="img/icon/comment.png" alt="">
+            <img src="img/icon/comment.png" alt="" />
             <span>17</span>
           </div>
-          <div class="col-4">
-            <div class="col-4">
-              <a href="#">
-                <img src="img/blog/blog2.jpg" alt="">
-                <div class="calendar">
-                  <span class="big-heading">15</span>
-                  <p class="month">Jan</p>
-                </div>
-              </a>
-              <a class="name" href="#">sed do eiusmod tempor</a>
-              <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-              <hr class="blog-hr">
-              <img src="img/icon/view.png" alt="">
-              <span class="view">992</span>
-              <img src="img/icon/comment.png" alt="">
-              <span>42</span>
+          <div class="col-lg-4">
+            <a href="#">
+              <img src="img/blog/blog2.jpg" alt="" />
+              <div class="calendar">
+                <span class="big-heading">25</span>
+                <p class="month">Dec</p>
+              </div>
+            </a>
+            <div>
+              <a class="name" href="#">Christopher Campbell</a>
+            <p class="content-blog">
+              Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua.
+            </p>
             </div>
+            <hr class="blog-hr" />
+            <img src="img/icon/view.png" alt="" />
+            <span class="view">542</span>
+            <img src="img/icon/comment.png" alt="" />
+            <span>17</span>
           </div>
-          <div class="col-4">
-            <div class="col-4">
-              <a href="#">
-                <img src="img/blog/blog3.jpg" alt="">
-                <div class="calendar">
-                  <span class="big-heading">15</span>
-                  <p class="month">Jan</p>
-                </div>
-              </a>
-              <a class="name" href="#">incididunt ut labore et dolore</a>
-              <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-              <hr class="blog-hr">
-              <img src="img/icon/view.png" alt="">
-              <span class="view">1560</span>
-              <img src="img/icon/comment.png" alt="">
-              <span>98</span>
-            </div>
+          <div class="col-lg-4">
+            <a href="#">
+              <img src="img/blog/blog3.jpg" alt="" />
+              <div class="calendar">
+                <span class="big-heading">12</span>
+                <p class="month">Feb</p>
+              </div>
+            </a>
+            <div><a class="name" href="#">Christopher Campbell</a>
+              <p class="content-blog">
+                Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua.
+              </p></div>
+            <hr class="blog-hr" />
+            <img src="img/icon/view.png" alt="" />
+            <span class="view">5432</span>
+            <img src="img/icon/comment.png" alt="" />
+            <span>200</span>
           </div>
         </div>
       </div>
@@ -825,10 +859,96 @@
     <footer>
       <div class="map">
         <a href="#">
-          <img src="img/icon/location.png" alt="">
+          <img src="img/icon/location.png" alt="" />
           <span class="open-map">Open map</span>
-          <hr class="h-line">
+          <hr class="h-line" />
         </a>
+      </div>
+      <div class="social container-box">
+        <div class="row">
+          <div class="col-md-12 col-lg-5 subcribe">
+            <h2 class="logo-footer">MoGo</h2>
+            <p class="description pb-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="follower"><span>15k </span> followers</div>
+            <hr />
+            <span class="social__follow">
+              Follow Us:
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-pinterest-p"></i></a>
+              <a href="#"><i class="fab fa-google-plus-g"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-dribbble"></i></a>
+              <a href="#"><i class="fab fa-tumblr"></i></a>
+            </span>
+            <form action="#">
+              <input
+                class="form-control"
+                type="email"
+                required
+                placeholder="Your Email"
+              />
+              <button class="btn btn-primary">subcribe</button>
+            </form>
+          </div>
+          <div class="col-md-6 col-lg-4 blog">
+              <span class="footer__title--blog">Blogs</span>
+              <div class="d-flex blog-row">
+                <a href="#"><img src="/img/contact/blog1.jpg" alt="" /></a>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                  </a>
+                  <span class="blog-date">Jan 9, 2016</span>
+                </p>
+              </div>
+              <div class="d-flex blog-row">
+                <a href="#"><img src="/img/contact/blog2.jpg" alt="" /></a>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                  </a>
+                  <span class="blog-date">Jan 9, 2016</span>
+                </p>
+              </div>
+              <div class="d-flex blog-row">
+                <a href="#"><img src="/img/contact/blog3.jpg" alt="" /></a>
+                <p>
+                  <a href="#">
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                  </a>
+                  <span class="blog-date">Jan 9, 2016</span>
+                </p>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-3 instagram">
+            <span class="footer__title--instagram">instagram</span>
+            <div class="row container-xl">
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram1.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram2.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram3.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram4.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram5.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram6.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram7.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram8.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="/img/contact/instagram9.jpg" alt=""></a></div>
+            </div>
+            <a href="#">View more photos</a>
+          </div>
+        </div>
+      </div>
+      <div class="copyright text-center">
+        <div class="container-xl">
+          <hr>
+          <p class="title--copyright"><i class="fa fa-copyright" aria-hidden="true"></i> 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
+        </div>
       </div>
     </footer>
   </body>
