--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div class="row container-box">
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/alarm.png" alt="" />
+                <img src="img/icon/alarm.png" alt="" />
                 <div class="text-left">
                   <h2>PHOTOGRAPHY</h2>
                   <p>
@@ -246,7 +246,7 @@
             </div>
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/line-graph.png" alt="" />
+                <img src="img/icon/line-graph.png" alt="" />
                 <div class="text-left">
                   <h2>Web Design</h2>
                   <p>
@@ -258,7 +258,7 @@
             </div>
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/computer.png" alt="" />
+                <img src="img/icon/computer.png" alt="" />
                 <div class="text-left">
                   <h2>Creativity</h2>
                   <p>
@@ -270,7 +270,7 @@
             </div>
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/book.png" alt="" />
+                <img src="img/icon/book.png" alt="" />
                 <div class="text-left">
                   <h2>SEO</h2>
                   <p>
@@ -282,7 +282,7 @@
             </div>
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/home.png" alt="" />
+                <img src="img/icon/home.png" alt="" />
                 <div class="text-left">
                   <h2>Css/Html</h2>
                   <p>
@@ -294,7 +294,7 @@
             </div>
             <div class="col-md-4 col-sm-6 item">
               <div>
-                <img src="./img/icon/image.png" alt="" />
+                <img src="img/icon/image.png" alt="" />
                 <div class="text-left">
                   <h2>digital</h2>
                   <p>
@@ -317,8 +317,8 @@
           </div>
           <div class="row container-fluid">
             <div class="col-6 offset-3">
-              <img class="tablet" src="./img/service/tablet.png" alt="" />
-              <img class="mobile" src="./img/service/mobile.png" alt="" />
+              <img class="tablet" src="/service/tablet.png" alt="" />
+              <img class="mobile" src="img/service/mobile.png" alt="" />
             </div>
           </div>
         </div>
@@ -338,7 +338,7 @@
             </div>
             <div class="row">
               <div class="col-xl-6">
-                <img src="./img/service/item.jpg" alt="" />
+                <img src="img/service/item.jpg" alt="" />
               </div>
               <div class="col-xl-6">
                 <div>
@@ -900,7 +900,7 @@
           <div class="col-md-6 col-lg-4 blog">
               <span class="footer__title--blog">Blogs</span>
               <div class="d-flex blog-row">
-                <a href="#"><img src="/img/contact/blog1.jpg" alt="" /></a>
+                <a href="#"><img src="img/contact/blog1.jpg" alt="" /></a>
                 <p>
                   <a href="#">
                     Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -909,7 +909,7 @@
                 </p>
               </div>
               <div class="d-flex blog-row">
-                <a href="#"><img src="/img/contact/blog2.jpg" alt="" /></a>
+                <a href="#"><img src="img/contact/blog2.jpg" alt="" /></a>
                 <p>
                   <a href="#">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -918,7 +918,7 @@
                 </p>
               </div>
               <div class="d-flex blog-row">
-                <a href="#"><img src="/img/contact/blog3.jpg" alt="" /></a>
+                <a href="#"><img src="img/contact/blog3.jpg" alt="" /></a>
                 <p>
                   <a href="#">
                     Lorem ipsum dolor sit amet consectetur adipisicing
@@ -930,15 +930,15 @@
           <div class="col-md-6 col-lg-3 instagram">
             <span class="footer__title--instagram">instagram</span>
             <div class="row container-xl">
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram1.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram2.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram3.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram4.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram5.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram6.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram7.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram8.jpg" alt=""></a></div>
-              <div class="col-4"><a href="#"><img src="/img/contact/instagram9.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram1.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram2.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram3.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram4.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram5.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram6.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram7.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram8.jpg" alt=""></a></div>
+              <div class="col-4"><a href="#"><img src="img/contact/instagram9.jpg" alt=""></a></div>
             </div>
             <a href="#">View more photos</a>
           </div>
