chỉnh sửa padding, margin, tối ưu mobile first

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 </p>
               </div>
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 mgb3">
                   <img src="img/service/item.jpg" alt="" />
                 </div>
                 <div class="col-lg-6">
@@ -412,7 +412,7 @@
                   <div class="carousel-item">
                     <div class="item row align-items-md-center">
                       <div class="col-3">
-                        <img style="width: 100%" src="img/icon/quote.png" alt="" />
+                        <img src="img/icon/quote.png" alt="" />
                       </div>
                       <div class="col-9 text-left">
                         <p class="quote-content">
@@ -427,11 +427,11 @@
                     </div>
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carousel-service-section" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carousel-service-section" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
@@ -623,7 +623,7 @@
           <!-- quote -->
           <div class="quote">
             <div class="container-xl">
-              <div id="carousel-service-section" class="carousel slide" data-ride="carousel">
+              <div id="some-of-out-work" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="item row align-items-md-center">
@@ -677,11 +677,11 @@
                     </div>
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#some-of-out-work" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#some-of-out-work" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
@@ -697,10 +697,10 @@
               <hr class="h-line" />
             </div>
             <div class="row container-xl m-auto pt-5 pb-5">
-              <div class="col-6">
+              <div class="col-sm-12 col-md-6">
                 <div class="row client_card">
                   <img class="col-3" src="img/work/client1.png" alt="" />
-                  <div class="col-9 text-left">
+                  <div class="col-8 text-left">
                     <h3>MATTHEW DIX</h3>
                     <h4>Graphic Design</h4>
                     <hr class="h-line" />
@@ -712,10 +712,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-12 col-md-6">
                 <div class="row client_card">
                   <img class="col-3" src="img/work/client2.png" alt="" />
-                  <div class="col-9 text-left">
+                  <div class="col-8 text-left">
                     <h3>MATTHEW DIX</h3>
                     <h4>Graphic Design</h4>
                     <hr class="h-line" />
@@ -727,10 +727,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-12 col-md-6">
                 <div class="row client_card">
                   <img class="col-3" src="img/work/client3.png" alt="" />
-                  <div class="col-9 text-left">
+                  <div class="col-8 text-left">
                     <h3>MATTHEW DIX</h3>
                     <h4>Graphic Design</h4>
                     <hr class="h-line" />
@@ -742,10 +742,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-12 col-md-6">
                 <div class="row client_card">
                   <img class="col-3" src="img/work/client4.png" alt="" />
-                  <div class="col-9 text-left">
+                  <div class="col-8 text-left">
                     <h3>MATTHEW DIX</h3>
                     <h4>Graphic Design</h4>
                     <hr class="h-line" />
@@ -774,7 +774,7 @@
           <div class="row list-blog container-xl text-left m-auto">
             <div class="col-lg-4">
               <a href="#">
-                <img src="img/blog/blog1.jpg" alt="" />
+                <img class="blog-ava" src="img/blog/blog1.jpg" alt="" />
                 <div class="calendar">
                   <span class="big-heading">15</span>
                   <p class="month">Jan</p>
@@ -795,7 +795,7 @@
             </div>
             <div class="col-lg-4">
               <a href="#">
-                <img src="img/blog/blog2.jpg" alt="" />
+                <img class="blog-ava" src="img/blog/blog2.jpg" alt="" />
                 <div class="calendar">
                   <span class="big-heading">25</span>
                   <p class="month">Dec</p>
@@ -816,7 +816,7 @@
             </div>
             <div class="col-lg-4">
               <a href="#">
-                <img src="img/blog/blog3.jpg" alt="" />
+                <img class="blog-ava" src="img/blog/blog3.jpg" alt="" />
                 <div class="calendar">
                   <span class="big-heading">12</span>
                   <p class="month">Feb</p>
@@ -849,7 +849,7 @@
     
     <div class="social container-xl">
       <div class="row">
-        <div class="col-md-12 col-lg-5 subcribe">
+        <div class="col-md-12 col-lg-5 subcribe mb-4">
           <h2 class="logo-footer">MoGo</h2>
           <p class="description pb-4">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -875,7 +875,7 @@
             <button class="btn btn-primary">subcribe</button>
           </form>
         </div>
-        <div class="col-md-6 col-lg-4 blog">
+        <div class="col-md-6 col-lg-4 blog mb-4">
           <span class="footer__title--blog">Blogs</span>
           <div class="d-flex blog-row">
             <a href="#"><img src="img/contact/blog1.jpg" alt="" /></a>
