backtotop, color hover

--- a/index.html
+++ b/index.html
@@ -929,6 +929,9 @@
             href="#">Laaqiq</a></p>
       </div>
     </div>
+    <button class="back-to-top">
+      <img src="img/icon/arrow-up.png" alt="">
+    </button>
   </footer>
 </body>
 
